fixed jumbotron and nav overflow issue on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -9,6 +9,10 @@
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 h1, h2, h3, h4, h5 ,h6 {
   font-family: 'Prompt', Georgia;
 }
